<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.RegistrationActivity"
    android:background="#14e48c">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="#14e48c"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/crdViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        card_view:contentPadding="20dp"
        app:cardElevation="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#404040"
        android:alpha="0.9"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="7dp"
        android:hint="@string/register_name"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE"

         />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="7dp"
        android:hint="@string/email_address"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE"
         />

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="7dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE" />

    <EditText
        android:id="@+id/etDelAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="7dp"
        android:hint="@string/delivery_address"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE"
         />

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="7dp"
        android:hint="@string/password_min_3_characters"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:drawablePadding="7dp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#A0A0A0"
        app:backgroundTint="#DBE5DE"
        android:layout_marginBottom="10dp"
       />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/crdViewRegister"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#000000"
        android:text="@string/register"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>