<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="#14e48c"
    android:alpha="0.9"
    tools:context=".activity.LogInActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_logo"
        android:layout_centerInParent="true"
        android:alpha="0.9"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/crdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        card_view:contentPadding="20dp"
        app:cardElevation="0dp"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#404040"
        android:alpha="0.9"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

       <EditText
           android:id="@+id/etMobileNo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawableStart="@drawable/ic_phone"
           android:drawablePadding="7dp"
           android:hint="@string/mobile_number"
           android:inputType="number"
           android:maxLength="10"
           android:textColor="#ffffff"
           android:textColorHint="#A0A0A0"
           app:backgroundTint="#DBE5DE"

          />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:textColorHint="#A0A0A0"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:drawablePadding="7dp"
            app:backgroundTint="#DBE5DE"
            />
        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#000000"

            />

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#000000"
        android:text="@string/create_account"
        android:layout_below="@+id/crdView"
        android:layout_marginTop="20dp"
        android:alpha="0.85"
        />

</RelativeLayout>