<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="#14e48c"
    android:alpha="0.9"
    tools:context=".activity.ResetActivity">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_logo"
        android:layout_centerInParent="true"
        android:alpha="0.9"
        />

    <TextView
        android:id="@+id/txtReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetDesc"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/crdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        card_view:contentPadding="20dp"
        app:cardElevation="0dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/txtReset"
        android:backgroundTint="#404040"
        android:alpha="0.9"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/etOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/OTP"
                android:maxLength="4"
                android:inputType="number"
                android:textColor="#ffffff"
                android:textColorHint="#A0A0A0"
                app:backgroundTint="#DBE5DE"
                />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reset_password"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#A0A0A0"
                app:backgroundTint="#DBE5DE"
                />
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginTop="15dp"
                android:textColorHint="#A0A0A0"
                android:textColor="#ffffff"
                app:backgroundTint="#DBE5DE"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#000000"
                android:textAllCaps="false"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>