<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="#14e48c"
    android:alpha="0.9"
    tools:context=".activity.ForgotActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="#14e48c"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_logo"
        android:layout_centerInParent="true"
        android:alpha="0.9"
        />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_desc"
        android:layout_above="@+id/crdView"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/crdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        card_view:contentPadding="20dp"
        app:cardElevation="0dp"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#404040"
        android:alpha="0.9"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/etMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="7dp"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="#ffffff"
                android:textColorHint="#A0A0A0"
                app:backgroundTint="#DBE5DE"

                />
            <EditText
                android:id="@+id/etEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email_address"
                android:layout_marginTop="20dp"
                android:textColorHint="#A0A0A0"
                android:textColor="#ffffff"
                android:drawablePadding="7dp"
                app:backgroundTint="#DBE5DE"
                />
            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="center"
                android:layout_marginTop="31dp"
                android:backgroundTint="#000000"
                android:textAllCaps="false"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#14e48c"
        android:elevation="1dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>